syntax = "proto3";

option csharp_namespace = "Rpc.Core";

package serviceInteraction;

service ServiceInteraction {
  rpc Ping(PingMessage) returns (PingReply);
  
  rpc GetConnectionInfo(LoginMessage) returns (GetConnectionInfoReply);
}

message PingMessage {
  string port1 = 1;
  string port2 = 2;
}

message PingReply {
  bool is_successful = 1;
}

message LoginMessage {
  string login = 1;
}

message GetConnectionInfoReply {
  bool is_connected = 1;
  int32 clients_number = 2;
}